# Plot_orientedmap

./: .gitmodules  CMakeLists.txt  README.md
Examples/: PLOT_1_PL_1_p31m_1_-_1_p3.eps  PLOT_1_PL_1_p31m_1_-_1_p3.option  PLOT_1_PL_1_p31m_1_-_1_p3.plane  PLOT_1_PL_1_p31m_1_-_3_p31m.eps  PLOT_1_PL_1_p31m_1_-_3_p31m.option  PLOT_1_PL_1_p31m_1_-_3_p31m.plane  PLOT_1_PL_2_D3d_1_-_1_S6.eps  PLOT_1_PL_2_D3d_1_-_1_S6.option  PLOT_1_PL_2_D3d_1_-_1_S6.plane  PLOT_1_PL_2_D3d_1_-_1_S6.view  PLOT_1_PL_3_p31m_1_-_1_p3.eps  PLOT_1_PL_3_p31m_1_-_1_p3.option  PLOT_1_PL_3_p31m_1_-_1_p3.plane  PLOT_1_PL_3_p4gm_1_-_1_pg.eps  PLOT_1_PL_3_p4gm_1_-_1_pg.option  PLOT_1_PL_3_p4gm_1_-_1_pg.plane  PLOT_2_PL_2_p2mg_2_-_1_pg.eps  PLOT_2_PL_2_p2mg_2_-_1_pg.option  PLOT_2_PL_2_p2mg_2_-_1_pg.plane  PLOT_2_PL_6_Oh_2_-_1_S6.eps  PLOT_2_PL_6_Oh_2_-_1_S6.option  PLOT_2_PL_6_Oh_2_-_1_S6.plane  PLOT_2_PL_6_Oh_2_-_1_S6.view  PLOT_SING_-_PL_4_D2_3_-_1_D2.eps  PLOT_SING_-_PL_4_D2_3_-_1_D2.option  PLOT_SING_-_PL_4_D2_3_-_1_D2.plane  PLOT_SING_-_PL_4_D2_3_-_1_D2.view
ExternalLib/permlib/include/permlib/: abstract_bsgs.h  abstract_bsgs_helpers.h  abstract_symmetric_product.h  bsgs.h  common.h  permlib_api.h  permutation.h  permutationword.h  symmetric_group.h
ExternalLib/permlib/include/permlib/change/: base_transpose.h
ExternalLib/permlib/include/permlib/construct/: random_schreier_sims_construction.h  schreier_sims_construction.h
ExternalLib/permlib/include/permlib/export/: bsgs_schreier_export.h
ExternalLib/permlib/include/permlib/search/: orbit_lex_min_search.h
ExternalLib/permlib/include/permlib/search/partition/: r_base.h  refinement.h  refinement_family.h
ExternalLib/permlib/include/permlib/test/: group_type.h  type_recognition.h
ExternalLib/permlib/include/permlib/transversal/: explicit_transversal.h  schreier_tree_transversal.h  shallow_schreier_tree_transversal.h  transversal.h
Manual/: Manual.aux  Manual.d  Manual.dvi  Manual.ps  Manual.tex
src/: Basic_file.h  Basic_string.h  CombPlaneToSVG.cpp  Combinatorics.h  Face_bitset.h  GraphicalBasic.h  GroupFct.h  Makefile  MapCoordinateFinder.h  Namelist.h  NumberTheory.h  PlaneGraph.h  PlaneGraphDrawing.h  SVGfunctions.h  Temp_Matrix.h  Temp_common.h
